// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppLayout > LeftSidebarAndMain story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="h-screen w-full grid bg-background overflow-hidden grid-rows-[auto_1fr_auto] grid-cols-[auto_1fr_auto] [grid-template-areas:"top_top_top"_"left_main_right"_"bottom_bottom_bottom"]"
  >
    <div
      class="[grid-area:top] z-30 sticky top-0"
    >
      <header
        class="w-full flex items-center px-6 py-4 border-b border-border shadow-xs bg-white"
      >
        <div
          class="flex items-center gap-3 min-w-0 flex-1"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="inline-block h-9 w-9"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Spenicle
              </title>
              <rect
                fill="#e07a5f"
                height="32"
                rx="8"
                width="32"
              />
              <g
                transform="translate(16, 16) scale(0.625) translate(-12, -12)"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                  fill="white"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="flex items-center gap-2 ml-auto"
        >
          <div
            class="inline-flex items-center justify-center font-medium overflow-hidden transition-all duration-200 select-none relative bg-primary-light text-primary h-7 w-7 text-xs rounded-full"
          >
            AB
          </div>
        </div>
      </header>
    </div>
    <aside
      class="[grid-area:left] z-20 border-r border-border bg-white"
    >
      <nav
        aria-label="Sidebar"
        class="w-56 bg-background border-r border-border flex flex-col my-2"
      >
        <div
          class="flex-1 overflow-y-auto scrollbar-thin scrollbar-thumb-border scrollbar-track-background"
        >
          <ul
            class="flex flex-col gap-1 mx-2"
          >
            <li>
              <a
                class="flex items-center gap-2 px-4 py-2 rounded-md hover:text-primary focus:outline-none transition-colors bg-primary/10 text-primary"
                href="/overview"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                <span
                  class="text-left font-normal text-sm"
                >
                  Overview
                </span>
              </a>
            </li>
            <li>
              <a
                class="flex items-center gap-2 px-4 py-2 rounded-md hover:text-primary focus:outline-none transition-colors text-ghost"
                href="/analytics"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-folder inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
                  />
                </svg>
                <span
                  class="text-left font-normal text-sm"
                >
                  Analytics
                </span>
              </a>
            </li>
            <li>
              <a
                class="flex items-center gap-2 px-4 py-2 rounded-md hover:text-primary focus:outline-none transition-colors text-ghost"
                href="/settings"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-settings inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
                <span
                  class="text-left font-normal text-sm"
                >
                  Settings
                </span>
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </aside>
    <main
      class="[grid-area:main] overflow-y-auto min-h-0"
    >
      <div
        class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"] [&_[class*="grid-area:header"]]:px-4 [&_[class*="grid-area:header"]]:sm:px-6 [&_[class*="grid-area:header"]]:lg:px-8 [&_[class*="grid-area:content"]]:px-4 [&_[class*="grid-area:content"]]:sm:px-6 [&_[class*="grid-area:content"]]:lg:px-8"
      >
        <div
          class="[grid-area:header] bg-transparent"
        >
          <header
            class="w-full mb-4"
            role="banner"
          >
            <div
              class="w-full mx-auto pt-4 md:pt-10 max-w-full"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-0"
                data-versaur-page-header-top="true"
              >
                <div
                  class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
                  data-versaur-page-header-content="true"
                >
                  <div
                    class="flex items-center justify-between"
                  >
                    <h1
                      class="text-ghost text-left truncate text-xl font-semibold"
                    >
                      Dashboard Content
                    </h1>
                    <div
                      class="md:hidden"
                      data-versaur-page-header-mobile-actions="true"
                    >
                      <button
                        aria-label="Add Widget"
                        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-plus inline-flex items-center justify-center w-4 h-4 text-white"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 12h14"
                          />
                          <path
                            d="M12 5v14"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <p
                    class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
                  >
                    Monitor your metrics and analytics
                  </p>
                </div>
                <div
                  class="hidden md:flex flex-col sm:flex-row gap-2 sm:gap-3 w-auto sm:ml-auto sm:shrink-0 [&>*]:w-full sm:[&>*]:w-auto"
                  data-versaur-page-header-actions="true"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus inline-flex items-center justify-center w-5 h-5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    Add Widget
                  </button>
                </div>
              </div>
              <div
                class="w-full flex items-center py-0 overflow-x-auto"
                data-versaur-page-header-bottom="true"
              >
                <nav
                  aria-label="Tabs"
                  class="relative w-full"
                >
                  <div
                    class="relative overflow-hidden"
                  >
                    <ul
                      class="flex flex-row w-full border-b border-border overflow-x-auto overflow-y-visible whitespace-nowrap py-1"
                      role="tablist"
                    >
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-overview"
                          aria-current="page"
                          aria-selected="true"
                          class="flex items-center justify-center px-4 py-2 text-sm text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none text-primary font-medium"
                          href="#overview"
                          id="tabs-trigger-overview"
                          role="tab"
                        >
                          Overview
                        </a>
                      </li>
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-details"
                          aria-selected="false"
                          class="flex items-center justify-center px-4 py-2 text-sm font-normal text-foreground text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none hover:text-primary"
                          href="#details"
                          id="tabs-trigger-details"
                          role="tab"
                        >
                          Details
                        </a>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      class="absolute bottom-0 h-0.5 rounded bg-primary transition-all duration-300 pointer-events-none"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </nav>
              </div>
            </div>
          </header>
        </div>
        <div
          class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full mx-auto relative max-w-full px-0 grid grid-cols-1 md:grid-cols-2 gap-6"
            >
              <div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 1
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 2
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 3
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 4
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 5
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Widget 6
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`AppLayout > ThreeColumn story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="h-screen w-full grid bg-background overflow-hidden grid-rows-[auto_1fr_auto] grid-cols-[auto_1fr_auto] [grid-template-areas:"top_top_top"_"left_main_right"_"bottom_bottom_bottom"]"
  >
    <div
      class="[grid-area:top] z-30 sticky top-0"
    >
      <header
        class="w-full flex items-center px-6 py-4 border-b border-border shadow-xs bg-white"
      >
        <div
          class="flex items-center gap-3 min-w-0 flex-1"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="inline-block h-9 w-9"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Spenicle
              </title>
              <rect
                fill="#e07a5f"
                height="32"
                rx="8"
                width="32"
              />
              <g
                transform="translate(16, 16) scale(0.625) translate(-12, -12)"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                  fill="white"
                />
              </g>
            </svg>
          </span>
          <nav
            class="flex items-center gap-2 ml-4"
          >
            <div
              aria-current="page"
              class="px-2.5 py-1.5 rounded-md text-sm cursor-pointer transition-colors bg-primary/10 text-primary"
            >
              Workspace
            </div>
            <div
              class="px-2.5 py-1.5 rounded-md text-sm cursor-pointer transition-colors hover:text-primary text-ghost"
            >
              Team
            </div>
          </nav>
        </div>
        <div
          class="flex items-center gap-2 ml-auto"
        >
          <div
            class="flex items-center gap-2 mr-4"
          >
            <button
              aria-label="Notifications"
              class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-7 w-7 rounded-md"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-bell inline-flex items-center justify-center w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.268 21a2 2 0 0 0 3.464 0"
                />
                <path
                  d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
                />
              </svg>
            </button>
          </div>
          <div
            class="inline-flex items-center justify-center font-medium overflow-hidden transition-all duration-200 select-none relative bg-primary-light text-primary h-7 w-7 text-xs rounded-full"
          >
            TU
          </div>
        </div>
      </header>
    </div>
    <aside
      class="[grid-area:left] z-20 border-r border-border bg-white"
    >
      <nav
        aria-label="Sidebar"
        class="w-56 bg-background border-r border-border flex flex-col my-2"
      >
        <div
          class="flex-1 overflow-y-auto scrollbar-thin scrollbar-thumb-border scrollbar-track-background"
        >
          <ul
            class="flex flex-col gap-1 mx-2"
          >
            <li>
              <a
                class="flex items-center gap-2 px-4 py-2 rounded-md hover:text-primary focus:outline-none transition-colors bg-primary/10 text-primary"
                href="/home"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-house inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                <span
                  class="text-left font-normal text-sm"
                >
                  Home
                </span>
              </a>
            </li>
            <li>
              <a
                class="flex items-center gap-2 px-4 py-2 rounded-md hover:text-primary focus:outline-none transition-colors text-ghost"
                href="/projects"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-folder inline-flex items-center justify-center w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
                  />
                </svg>
                <span
                  class="text-left font-normal text-sm"
                >
                  Projects
                </span>
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </aside>
    <main
      class="[grid-area:main] overflow-y-auto min-h-0"
    >
      <div
        class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"] [&_[class*="grid-area:header"]]:px-4 [&_[class*="grid-area:header"]]:sm:px-6 [&_[class*="grid-area:header"]]:lg:px-8 [&_[class*="grid-area:content"]]:px-4 [&_[class*="grid-area:content"]]:sm:px-6 [&_[class*="grid-area:content"]]:lg:px-8"
      >
        <div
          class="[grid-area:header] bg-transparent"
        >
          <header
            class="w-full mb-4"
            role="banner"
          >
            <div
              class="w-full mx-auto pt-4 md:pt-10 max-w-full"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-0"
                data-versaur-page-header-top="true"
              >
                <div
                  class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
                  data-versaur-page-header-content="true"
                >
                  <div
                    class="flex items-center justify-between"
                  >
                    <h1
                      class="text-ghost text-left truncate text-xl font-semibold"
                    >
                      Dashboard Content
                    </h1>
                    <div
                      class="md:hidden"
                      data-versaur-page-header-mobile-actions="true"
                    >
                      <button
                        aria-label="Add Widget"
                        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 w-9 rounded-md"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-plus inline-flex items-center justify-center w-4 h-4 text-white"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5 12h14"
                          />
                          <path
                            d="M12 5v14"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <p
                    class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
                  >
                    Monitor your metrics and analytics
                  </p>
                </div>
                <div
                  class="hidden md:flex flex-col sm:flex-row gap-2 sm:gap-3 w-auto sm:ml-auto sm:shrink-0 [&>*]:w-full sm:[&>*]:w-auto"
                  data-versaur-page-header-actions="true"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus inline-flex items-center justify-center w-5 h-5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                    Add Widget
                  </button>
                </div>
              </div>
              <div
                class="w-full flex items-center py-0 overflow-x-auto"
                data-versaur-page-header-bottom="true"
              >
                <nav
                  aria-label="Tabs"
                  class="relative w-full"
                >
                  <div
                    class="relative overflow-hidden"
                  >
                    <ul
                      class="flex flex-row w-full border-b border-border overflow-x-auto overflow-y-visible whitespace-nowrap py-1"
                      role="tablist"
                    >
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-overview"
                          aria-current="page"
                          aria-selected="true"
                          class="flex items-center justify-center px-4 py-2 text-sm text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none text-primary font-medium"
                          href="#overview"
                          id="tabs-trigger-overview"
                          role="tab"
                        >
                          Overview
                        </a>
                      </li>
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-details"
                          aria-selected="false"
                          class="flex items-center justify-center px-4 py-2 text-sm font-normal text-foreground text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none hover:text-primary"
                          href="#details"
                          id="tabs-trigger-details"
                          role="tab"
                        >
                          Details
                        </a>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      class="absolute bottom-0 h-0.5 rounded bg-primary transition-all duration-300 pointer-events-none"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </nav>
              </div>
            </div>
          </header>
        </div>
        <div
          class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full mx-auto relative max-w-full px-0 grid grid-cols-1"
            >
              <div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 1
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 2
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 3
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 4
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 5
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 6
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 7
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 8
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 9
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 10
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 11
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Item 12
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <aside
      class="[grid-area:right] z-20 border-l border-border bg-white"
    >
      <div
        class="h-full w-64 bg-background p-4"
      >
        <div
          class="mb-4 font-semibold text-foreground"
        >
          Details
        </div>
        <div
          class="rounded bg-info/10 p-3 text-xs text-info"
        >
          Additional information and context goes here.
        </div>
      </div>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`AppLayout > TopAndMain story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="h-screen w-full grid bg-background overflow-hidden grid-rows-[auto_1fr_auto] grid-cols-[auto_1fr_auto] [grid-template-areas:"top_top_top"_"left_main_right"_"bottom_bottom_bottom"]"
  >
    <div
      class="[grid-area:top] z-30 sticky top-0"
    >
      <header
        class="w-full flex items-center px-6 py-4 border-b border-border shadow-xs bg-white"
      >
        <div
          class="flex items-center gap-3 min-w-0 flex-1"
        >
          <span
            class="inline-flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="inline-block h-9 w-9"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Spenicle
              </title>
              <rect
                fill="#e07a5f"
                height="32"
                rx="8"
                width="32"
              />
              <g
                transform="translate(16, 16) scale(0.625) translate(-12, -12)"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                  fill="white"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="flex items-center gap-2 ml-auto"
        >
          <div
            class="inline-flex items-center justify-center font-medium overflow-hidden transition-all duration-200 select-none relative bg-primary-light text-primary h-7 w-7 text-xs rounded-full"
          >
            JD
          </div>
        </div>
      </header>
    </div>
    <main
      class="[grid-area:main] overflow-y-auto min-h-0"
    >
      <div
        class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
      >
        <div
          class="[grid-area:header] bg-transparent"
        >
          <header
            class="w-full mb-4"
            role="banner"
          >
            <div
              class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
                data-versaur-page-header-top="true"
              >
                <div
                  class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
                  data-versaur-page-header-content="true"
                >
                  <div
                    class="flex items-center justify-between"
                  >
                    <h1
                      class="text-ghost text-left truncate text-xl font-semibold"
                    >
                      Simple Layout
                    </h1>
                  </div>
                  <p
                    class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
                  >
                    A minimal layout with top bar and main content
                  </p>
                </div>
              </div>
              <div
                class="w-full flex items-center py-0 overflow-x-auto"
                data-versaur-page-header-bottom="true"
              >
                <nav
                  aria-label="Tabs"
                  class="relative w-full"
                >
                  <div
                    class="relative overflow-hidden"
                  >
                    <ul
                      class="flex flex-row w-full border-b border-border overflow-x-auto overflow-y-visible whitespace-nowrap py-1"
                      role="tablist"
                    >
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-overview"
                          aria-current="page"
                          aria-selected="true"
                          class="flex items-center justify-center px-4 py-2 text-sm text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none text-primary font-medium"
                          href="#overview"
                          id="tabs-trigger-overview"
                          role="tab"
                        >
                          Overview
                        </a>
                      </li>
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-details"
                          aria-selected="false"
                          class="flex items-center justify-center px-4 py-2 text-sm font-normal text-foreground text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none hover:text-primary"
                          href="#details"
                          id="tabs-trigger-details"
                          role="tab"
                        >
                          Details
                        </a>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      class="absolute bottom-0 h-0.5 rounded bg-primary transition-all duration-300 pointer-events-none"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </nav>
              </div>
            </div>
          </header>
        </div>
        <div
          class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
            >
              <div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 1
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 2
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 3
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 4
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 5
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 6
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 7
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Section 8
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`AppLayout > WithBottomNav story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="h-screen w-full grid bg-background overflow-hidden grid-rows-[auto_1fr_auto] grid-cols-[auto_1fr_auto] [grid-template-areas:"top_top_top"_"left_main_right"_"bottom_bottom_bottom"]"
  >
    <main
      class="[grid-area:main] overflow-y-auto min-h-0"
    >
      <div
        class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
      >
        <div
          class="[grid-area:header] bg-transparent"
        >
          <header
            class="w-full mb-4"
            role="banner"
          >
            <div
              class="w-full mx-auto pt-4 md:pt-10 max-w-full"
            >
              <div
                class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-0"
                data-versaur-page-header-top="true"
              >
                <div
                  class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
                  data-versaur-page-header-content="true"
                >
                  <div
                    class="flex items-center justify-between"
                  >
                    <h1
                      class="text-ghost text-left truncate text-xl font-semibold"
                    >
                      Feed
                    </h1>
                  </div>
                  <p
                    class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
                  >
                    Your latest updates
                  </p>
                </div>
              </div>
              <div
                class="w-full flex items-center py-0 overflow-x-auto"
                data-versaur-page-header-bottom="true"
              >
                <nav
                  aria-label="Tabs"
                  class="relative w-full"
                >
                  <div
                    class="relative overflow-hidden"
                  >
                    <ul
                      class="flex flex-row w-full border-b border-border overflow-x-auto overflow-y-visible whitespace-nowrap py-1"
                      role="tablist"
                    >
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-overview"
                          aria-current="page"
                          aria-selected="true"
                          class="flex items-center justify-center px-4 py-2 text-sm text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none text-primary font-medium"
                          href="#overview"
                          id="tabs-trigger-overview"
                          role="tab"
                        >
                          Overview
                        </a>
                      </li>
                      <li
                        role="presentation"
                      >
                        <a
                          aria-controls="tabs-content-details"
                          aria-selected="false"
                          class="flex items-center justify-center px-4 py-2 text-sm font-normal text-foreground text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none hover:text-primary"
                          href="#details"
                          id="tabs-trigger-details"
                          role="tab"
                        >
                          Details
                        </a>
                      </li>
                    </ul>
                    <div
                      aria-hidden="true"
                      class="absolute bottom-0 h-0.5 rounded bg-primary transition-all duration-300 pointer-events-none"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </nav>
              </div>
            </div>
          </header>
        </div>
        <div
          class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
        >
          <div
            class="w-full"
          >
            <div
              class="w-full mx-auto relative max-w-full px-0 grid grid-cols-1"
            >
              <div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 1
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 2
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 3
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 4
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 5
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 6
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 7
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 8
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 9
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 10
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 11
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 12
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 13
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 14
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
                <div
                  class="rounded-lg bg-primary-soft p-6 text-foreground"
                >
                  <h2
                    class="mb-2 text-xl font-semibold"
                  >
                    Post 15
                  </h2>
                  <p
                    class="text-foreground-light"
                  >
                    This is sample content to demonstrate the layout behavior.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="[grid-area:bottom] z-30 border-t border-border bg-white"
    >
      <nav
        aria-label="Bottom navigation"
        class="sticky bottom-0 w-full flex justify-around items-center bg-white border-t border-border shadow-xs z-40 safe-bottom gap-4 select-none px-8 h-16 text-base"
        role="navigation"
      >
        <button
          aria-current="page"
          class="flex flex-col items-center justify-center gap-1 text-primary transition-all duration-200 h-8 w-8 outline-none cursor-pointer active:scale-98 focus-visible:ring-2 focus-visible:ring-primary-light focus-visible:rounded-full"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-house inline-flex items-center justify-center w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
            />
            <path
              d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
          </svg>
        </button>
        <button
          class="flex flex-col items-center justify-center gap-1 text-ghost transition-all duration-200 h-8 w-8 outline-none cursor-pointer active:scale-98 focus-visible:ring-2 focus-visible:ring-primary-light focus-visible:rounded-full"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search inline-flex items-center justify-center w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
        <button
          class="flex flex-col items-center justify-center gap-1 text-ghost transition-all duration-200 h-8 w-8 outline-none cursor-pointer active:scale-98 focus-visible:ring-2 focus-visible:ring-primary-light focus-visible:rounded-full"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus inline-flex items-center justify-center w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
        <button
          class="flex flex-col items-center justify-center gap-1 text-ghost transition-all duration-200 h-8 w-8 outline-none cursor-pointer active:scale-98 focus-visible:ring-2 focus-visible:ring-primary-light focus-visible:rounded-full"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user inline-flex items-center justify-center w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
